--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     margin-bottom: 20px;
 }
 
-#start {
+.btn {
     width: 100px;
     height: 30px;
     background-color: var(--main-color);
@@ -25,6 +25,11 @@ body {
     cursor: pointer;
 }
 
-#start:active {
+.btn:active {
     background-color: var(--second-color);
+}
+
+.gameover {
+    display: none;
+    color: #ff4e4e;
 }
